# izwi

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_GUIDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  config.docker.toml  config.toml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
crates/izwi-agent/: Cargo.toml
crates/izwi-agent/src/: agent.rs  engine.rs  errors.rs  lib.rs  memory.rs  model.rs  planner.rs  session.rs  tools.rs
crates/izwi-asr-toolkit/: Cargo.toml
crates/izwi-asr-toolkit/src/: lib.rs
crates/izwi-cli/: Cargo.toml  README.md
crates/izwi-cli/src/: config.rs  error.rs  http.rs  main.rs  style.rs  utils.rs
crates/izwi-core/: Cargo.toml
crates/izwi-core/src/: config.rs  error.rs  lib.rs  tokenizer.rs
crates/izwi-desktop/: Cargo.toml  Info.plist  tauri.conf.json
crates/izwi-desktop/capabilities/: default.json
crates/izwi-desktop/icons/: icon.icns
crates/izwi-desktop/src/: main.rs
crates/izwi-desktop/src/app/: autostart.rs  mod.rs  tray.rs  tray_visibility.rs  updater.rs  updater_contract.rs  window.rs
crates/izwi-server/: Cargo.toml
crates/izwi-server/src/: chat_store.rs  diarization_store.rs  error.rs  main.rs  onboarding_store.rs  saved_voice_store.rs  (+9 more)
docs/: INFERENCE_ENGINE_ARCHITECTURE.md  INFERENCE_ENGINE_DEEP_DIVE.md  PRODUCTION_READINESS_ANALYSIS.md  RELEASING.md  studio-naming-migration.md  voice-studio-spec.md
docs/basics/: FOUNDATIONAL_LLM_SERVING_PAPERS.md
docs/dev/: INFERENCE_ENGINE.md  PAGINATION.md  TRANSCRIPTION_SUMMARY_CONTRACT.md
docs/user/: getting-started.md  index.md  manual-gemma-3-1b-download.md  troubleshooting.md
scripts/: __init__.py  dev.sh  install-cli.sh  lfm2_daemon.py  qwen3_asr_daemon.py  uninstall-macos.sh
tasks/: todo.md
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.test.ts  types.ts  vite-env.d.ts
ui/tasks/: todo.md
(+408 files in other folders)
