[package]
name = "izwi-desktop"
description = "Tauri desktop shell for Izwi local inference server"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "izwi-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
url = "2.5"
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-aptabase = "1.0.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.9.0"
# Keep the Aptabase reqwest proxy stack on a sandbox-safe macOS line.
hyper-util = "0.1.20"
dirs = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
